<resources>
    <string name="app_name">PlanesLufthansa</string>
    <string name="capacidad">Capacidad: %1$s pasajeros</string>
    <string name="flota">Flota: %1$s</string>
    <string name="longitud">Longitud: %1$s</string>
    <string name="altura">Altura: %1$s</string>
    <string name="motor">Motor: %1$s</string>
    <string name="envergadura">Envergadura: %1$s</string>
    <string name="velocidadmax">Velocidad maxima: %1$s</string>
    <string name="autonomia">Autonomía: %1$s</string>
    <string name="length">Longitud:</string>
    <string name="heigth">Altura:</string>
    <string name="engine">Motor:</string>
    <string name="maximumspeed">Velocidad maxima:</string>
    <string name="winspan">Envergadura:</string>
    <string name="autonomy">Autonomía:</string>
    <string name="title">Title</string>
    <string name="fabricante">Fabricante</string>
    <string name="cap">Capacidad</string>
    <string name="fleet">Flota</string>
    <string name="id_recibido">Id Recibido: %1$s</string>
    <string name="no_conexion">No hay conexión</string>
    <string name="error">Error: %1$s</string>
    <string name="welcome">Bienvenido: %1$s</string>
    <string name="el_correo_de_verificacion_se_ha_enviando">El correo de verificacion se ha enviando</string>
    <string name="no_se_pudo_enviar_el_correo_de_verificacion">No se pudo enviar el correo de verificacion</string>
    <string name="usuario_creado">Usuario creado</string>
    <string name="restablecer_contrase">Restablecer contraseña</string>
    <string name="ingresa_tu_correo_para_recibir_el_enlace_para_restablecer">Ingresa tu correo para recibir el enlace para restablecer</string>
    <string name="enviar">Enviar</string>
    <string name="el_enlace_para_restablecer_la_contrase_a_ha_sido_enviado_a_su_correo">El enlace para restablecer la contraseña ha sido enviado a su correo</string>
    <string name="el_enlace_no_se_ha_podido_enviar">El enlace no se ha podido enviar: %1$s</string>
    <string name="favor_de_ingresar_la_direccion_de_correo">Favor de ingresar la direccion de correo</string>
    <string name="cancelar">Cancelar</string>
    <string name="se_requiere_el_correo">Se requiere el correo</string>
    <string name="se_requiere_una_contrase_a_o_la_contrase_a_no_tiene_por_lo_menos_6_caracteres">Se requiere una contraseña o la contraseña no tiene por lo menos 6 caracteres</string>
    <string name="error_el_correo_electr_nico_no_tiene_un_formato_correcto">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="error_la_contrase_a_no_es_v_lida">Error: La contraseña no es válida</string>
    <string name="la_contrase_a_no_es_v_lida">La contraseña no es válida</string>
    <string name="error_una_cuenta_ya_existe_con_el_mismo_correo_pero_con_diferentes_datos_de_ingreso">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="error_el_correo_electr_nico_ya_est_en_uso_con_otra_cuenta">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="error_la_sesi_n_ha_expirado_favor_de_ingresar_nuevamente">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="error_no_existe_el_usuario_con_la_informaci_n_proporcionada">Error: No existe el usuario con la información proporcionada.</string>
    <string name="la_contrase_a_porporcionada_es_inv_lida">La contraseña porporcionada es inválida</string>
    <string name="la_contrase_a_debe_de_tener_por_lo_menos_6_caracteres">La contraseña debe de tener por lo menos 6 caracteres</string>
    <string name="red_no_disponible_o_se_interrumpi_la_conexi_n">Red no disponible o se interrumpió la conexión</string>
    <string name="error_no_se_pudo_autenticar_exitosamente">Error. No se pudo autenticar exitosamente.</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvid_su_contrase_a_restablecer_aqu">¿Olvidó su contraseña? Restablecer aquí</string>
    <string name="registrarse">Registrarse</string>
    <string name="diplo_m_viles">© Diplo Móviles</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>

</resources>